# meso_negotiator

./: .env.example  .gitignore  CLAUDE.md  README.md  biome.json  compose.yml  mise.toml  pyproject.toml  ruff.toml
.claude/: settings.json
back/: Dockerfile  config.py  dependencies.py  routes.py  server.py
back/api/: __init__.py  dependencies.py  exception_handlers.py  routes.py  schemas.py
back/application/: agree.py  end_negotiation.py  get_offers.py  improve.py  ports.py  reset.py  secure.py
back/domain/: concession.py  defaults.py  exceptions.py  maut.py  meso.py  negotiation.py  opponent_model.py  types.py
back/infrastructure/: memory_repo.py
back/tests/: conftest.py  factories.py  test_api_integration.py  test_safety_net.py  testing-journal.md
back/tests/features/: core-loop.feature  operator_configuration.feature  supplier_negotiation.feature
back/tests/step_defs/: test_s01_offer_presentation.py  test_s02_actions_per_card.py  test_s03_agree.py  test_s04_secure_fallback.py  test_s05_improve_terms.py  test_s06_round_progression.py  test_s07_no_deal.py  test_s08_meso_constraints.py  test_s09_operator_config.py  test_s10_ui_not_present.py  test_s11_ui_states.py  test_s12_lifecycle.py  test_s13_opponent_model.py  (+4 more)
docs/: deal-flow.md  frontend-refactoring-plan.md  pactum-plan.md  persona-pactum-operator.md  persona-pactum-supplier.md  system-flow.md
front/: .env.example  Dockerfile  nginx.conf.template  package-lock.json  package.json  vite.config.ts
front/src/: App.test.tsx  App.tsx  api.ts  config.ts  types.ts
tests/: testing-journal.md
(+25 files in other folders)
