[project]
name = "meso-negotiator"
version = "0.1.0"
description = "Meso-level negotiation assistant"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["back"]

[tool.pytest.ini_options]
testpaths = ["back/tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
