[project]
name = "meso-negotiator"
version = "0.1.0"
description = "Meso-level negotiation assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["back"]

[tool.pytest.ini_options]
testpaths = ["back/tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "httpx>=0.27",
    "mypy>=1.19.1",
    "pytest>=8.0",
    "pytest-bdd>=8.0",
]
